# mnemnosyne-rs

./: .markdownlint-cli2.jsonc  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  main.yml  pr.yml  release.yml  version.yml
mnemosyne-macros/: Cargo.toml
mnemosyne-macros/src/: lib.rs
src/: dynamodb.rs  error.rs  lib.rs  mnemosyne.rs  model.rs  persistence.rs
tests/: correctness_test.rs  integration_test.rs  macro_test.rs
